syntax = "proto3";
package chorus;
option go_package = ".;chorus";

import "google/protobuf/timestamp.proto";

message App {
    uint64 id = 1;

    uint64 tenantId = 2;
    uint64 userId = 3;
    
    string name = 4;
    string prettyName = 5;
    string description = 6;
    string status = 7;
    
    string dockerImageRegistry = 8;
    string dockerImageName = 9;
    string dockerImageTag = 10;

    string shmSize = 11;
    string maxCPU = 12;
    string minCPU = 13;
    string maxMemory = 14;
    string minMemory = 15;
    string maxEphemeralStorage = 16;
    string minEphemeralStorage = 17;
    string kioskConfigURL = 18;
    string iconURL = 19;

    google.protobuf.Timestamp createdAt = 20;
    google.protobuf.Timestamp updatedAt = 21;
}
