syntax = "proto3";
package chorus;
option go_package = ".;chorus";

message Credentials {
    string username = 1;
    string password = 2;
    string totp = 3;
}

message OpenID {
    string id = 1;
}

message Internal {
    bool public_registration_enabled = 1;
}

message AuthenticationMode {
    string type  = 1;
    optional Internal internal = 2;
    optional OpenID openid = 3;
    string ButtonText = 4;
    string IconURL = 5;
}