syntax = "proto3";
package chorus;
option go_package = ".;chorus";

import "google/protobuf/timestamp.proto";

message User {
    uint64 id = 1;

    string firstName = 2;
    string lastName = 3;
    string username = 4;
    string password = 5;
    string status = 6;

    repeated string roles = 7;

    bool totpEnabled = 8;

    google.protobuf.Timestamp createdAt = 9;
    google.protobuf.Timestamp updatedAt = 10;

    bool passwordChanged = 11;
}
